fix(02): revise plan 02-02 based on checker feedback

--- a/.planning/phases/02-enhanced-task-completion/02-02-PLAN.md
+++ b/.planning/phases/02-enhanced-task-completion/02-02-PLAN.md
@@ -6,9 +6,11 @@ wave: 2
 depends_on: [02-01]
 files_modified:
   - server/services/htmlGenerator.js
+  - server/routes/tasks.js
   - client/src/components/shared/TaskCard.jsx
   - client/src/components/shared/Modal.jsx
   - client/src/index.css
+  - client/src/context/AppContext.jsx
 autonomous: false
 
 must_haves:
@@ -23,6 +25,9 @@ must_haves:
     - path: "server/services/htmlGenerator.js"
       provides: "Updated HTML template with image upload form"
       contains: "input type=\"file\""
+    - path: "server/routes/tasks.js"
+      provides: "GET /api/tasks/:id/attachments endpoint"
+      exports: ["router"]
     - path: "client/src/components/shared/TaskCard.jsx"
       provides: "Image thumbnails and lightbox display"
       contains: "task_attachments"
@@ -42,6 +47,10 @@ must_haves:
       to: "Modal component"
       via: "lightbox state toggle"
       pattern: "setLightbox"
+    - from: "server/index.js"
+      to: "server/routes/tasks.js"
+      via: "router mounting at /api/tasks"
+      pattern: "app\\.use\\('/api/tasks'.*require.*tasks"
 ---
 
 <objective>
@@ -72,6 +81,7 @@ Output: Updated HTML template with mobile-friendly upload form, TaskCard compone
 
 # Codebase context
 @server/services/htmlGenerator.js
+@server/routes/tasks.js
 @client/src/components/shared/TaskCard.jsx
 @client/src/components/shared/Modal.jsx
 @client/src/context/AppContext.jsx
@@ -269,6 +279,7 @@ async function submitCompletion(taskId) {
 <task type="auto">
   <name>Display images and notes in manager TaskCard with lightbox preview</name>
   <files>
+    server/routes/tasks.js
     client/src/components/shared/TaskCard.jsx
     client/src/components/shared/Modal.jsx
     client/src/index.css
@@ -277,7 +288,42 @@ async function submitCompletion(taskId) {
   <action>
 Add image thumbnails and notes display to TaskCard, with lightbox modal for full-size image viewing.
 
-**1. Fetch attachments in AppContext:**
+**1. Create API endpoint for fetching attachments:**
+
+In `server/routes/tasks.js`, add GET endpoint for attachments:
+
+```javascript
+// Get attachments for a task
+router.get('/:id/attachments', (req, res) => {
+  try {
+    const { id } = req.params;
+
+    const attachments = db.prepare(\`
+      SELECT id, task_id, file_path, file_type, uploaded_at
+      FROM task_attachments
+      WHERE task_id = ?
+      ORDER BY uploaded_at DESC
+    \`).all(id);
+
+    res.json(attachments);
+  } catch (error) {
+    console.error('Error fetching attachments:', error);
+    res.status(500).json({ error: 'שגיאה בטעינת קבצים מצורפים' });
+  }
+});
+```
+
+**CRITICAL: Verify router mounting in server/index.js**
+
+Check that `server/index.js` has the tasks router mounted. Look for:
+
+```javascript
+app.use('/api/tasks', require('./routes/tasks'));
+```
+
+If missing, add this line after other route registrations (around line 70). The tasks router must be mounted at `/api/tasks` for the GET /api/tasks/:id/attachments endpoint to be accessible.
+
+**2. Fetch attachments in AppContext:**
 
 In `client/src/context/AppContext.jsx`, update fetchTasks to include attachments:
 
@@ -303,31 +349,6 @@ const fetchTasks = async () => {
     console.error('Error fetching tasks:', error);
   }
 };
-```
-
-**2. Create API endpoint for fetching attachments:**
-
-In `server/routes/tasks.js`, add GET endpoint for attachments:
-
-```javascript
-// Get attachments for a task
-router.get('/:id/attachments', (req, res) => {
-  try {
-    const { id } = req.params;
-
-    const attachments = db.prepare(\`
-      SELECT id, task_id, file_path, file_type, uploaded_at
-      FROM task_attachments
-      WHERE task_id = ?
-      ORDER BY uploaded_at DESC
-    \`).all(id);
-
-    res.json(attachments);
-  } catch (error) {
-    console.error('Error fetching attachments:', error);
-    res.status(500).json({ error: 'שגיאה בטעינת קבצים מצורפים' });
-  }
-});
 ```
 
 **3. Update TaskCard to display completion data:**
@@ -544,13 +565,14 @@ socket.on('task:updated', async (data) => {
 9. Open in second browser tab - verify both tabs show completion data in real-time
   </verify>
   <done>
+- GET /api/tasks/:id/attachments endpoint created in server/routes/tasks.js
+- Tasks router verified mounted at /api/tasks in server/index.js
 - TaskCard displays completion_note in yellow box when present
 - TaskCard displays image thumbnails (80x80px) when attachments exist
 - Thumbnails have hover effect (scale 1.05)
 - Clicking thumbnail opens lightbox modal with full-size image
 - Lightbox overlay covers full viewport with dark background
 - Clicking outside image closes lightbox
-- API endpoint GET /api/tasks/:id/attachments returns attachment array
 - AppContext fetches attachments for all tasks on mount
 - WebSocket task:updated listener fetches attachments for updated task
 - Real-time updates show completion data immediately in all open tabs
