docs: add fixed port configuration (5174 for client, 3002 for server)
- Created .planning/PORTS.md with port documentation
- Updated .planning/PROJECT.md with port URLs
- Updated .planning/phases/02-enhanced-task-completion/.continue-here.md
- Port 5174 chosen for client (5173 occupied by lia-reading-game)
- Port 3002 remains fixed for server

--- a/.planning/phases/02-enhanced-task-completion/.continue-here.md
+++ b/.planning/phases/02-enhanced-task-completion/.continue-here.md
@@ -132,6 +132,8 @@ Now we need to add **images** to this flow:
 - 02-05: Show history of completions
 
 ### Technical Context:
+- **Client URL:** http://localhost:5174 (פורט קבוע)
+- **Server URL:** http://localhost:3002 (פורט קבוע)
 - **Upload endpoint:** POST /api/confirm/:token/complete
 - **Accepts:** multipart/form-data with fields: taskId, note, image
 - **Image storage:** uploads/ directory with crypto hex filenames
@@ -241,8 +243,8 @@ Details:
 
 1. **Database schema:** pending_approval and received statuses now in CHECK constraint
 2. **WhatsApp:** Authenticated and ready (session persisted in .wwebjs_auth)
-3. **Client port:** Running on 5184 (multiple ports in use)
-4. **Server port:** 3002
+3. **Client port:** 5174 (פורט קבוע - לא 5173 שתפוס)
+4. **Server port:** 3002 (פורט קבוע)
 5. **Real-time:** WebSocket connection auto-reconnects
 6. **Testing approach:** Use עדן קנדי (employee_id: 5) for all tests
 7. **Sample data:** Reloading wipes completion data (don't reload during tests)
