fix(04): revise plans based on checker feedback
Iteration 2/3 - Address 2 blockers:

1. [key_links_planned] Make location_id migration mandatory
   - Changed Task 2 from optional 'if' statement to required ALTER TABLE
   - Added explicit verification of location filtering via JOIN
   - Updated must_haves and key_links to include location filtering

2. [task_completeness] Add package.json verification
   - Added 'Check package.json - node-cron appears in dependencies' to Task 3 verify
   - Added server/package.json to files_modified frontmatter

Files updated:
- .planning/phases/04-history-archive/04-01-PLAN.md

Plan 04-02 unchanged (warning about 3 components is optional, not blocking)

--- a/.planning/phases/04-history-archive/04-01-PLAN.md
+++ b/.planning/phases/04-history-archive/04-01-PLAN.md
@@ -8,6 +8,8 @@ files_modified:
   - server/database/schema.js
   - server/routes/history.js
   - server/index.js
+  - server/services/dataRetention.js
+  - server/package.json
 autonomous: true
 
 must_haves:
@@ -25,13 +27,17 @@ must_haves:
       exports: ["initializeDataRetention", "cleanupOldTasks"]
       min_lines: 80
     - path: "server/database/schema.js"
-      provides: "Composite indexes for history query performance"
+      provides: "Composite indexes for history query performance and location_id for filtering"
       contains: "idx_tasks_history"
   key_links:
     - from: "server/routes/history.js"
       to: "tasks table"
       via: "composite index idx_tasks_history"
       pattern: "status.*completed_at.*employee_id.*system_id"
+    - from: "server/routes/history.js"
+      to: "locations table"
+      via: "JOIN through systems.location_id"
+      pattern: "JOIN.*systems.*location_id"
     - from: "server/services/dataRetention.js"
       to: "tasks table"
       via: "scheduled cron job"
@@ -128,7 +134,7 @@ History endpoint exists at /api/history, accepts all filter parameters, returns 
 </task>
 
 <task type="auto">
-  <name>Task 2: Create Database Indexes for History Query Performance</name>
+  <name>Task 2: Create Database Indexes and Location Filtering Schema</name>
   <files>server/database/schema.js</files>
   <action>
 Add composite index creation in initializeDatabase() function after task_attachments table creation:
@@ -171,26 +177,51 @@ console.log('Query plan:', plan);
 
 Look for "USING INDEX idx_tasks_history" in output (not "SCAN TABLE tasks").
 
-Location filtering note: If systems table doesn't have location_id column, add migration:
+**Add location_id column to systems table (required for HA-06 location filtering):**
+
 ```javascript
+// Location filtering support - add location_id to systems if not exists
 try {
   db.exec(`ALTER TABLE systems ADD COLUMN location_id INTEGER REFERENCES locations(id)`);
+  console.log('Added location_id column to systems table');
 } catch (e) {
-  // Column exists, ignore
+  // Column already exists, skip
+  if (!e.message.includes('duplicate column')) {
+    throw e;
+  }
 }
 ```
 
-Then history queries can JOIN through systems to filter by location.
+Then history queries can JOIN through systems to filter by location:
+```sql
+LEFT JOIN systems s ON t.system_id = s.id
+LEFT JOIN locations l ON s.location_id = l.id
+WHERE s.location_id = ?
+```
+
+Verify location filtering works:
+```javascript
+const testQuery = db.prepare(`
+  SELECT t.*, l.name as location_name
+  FROM tasks t
+  JOIN systems s ON t.system_id = s.id
+  JOIN locations l ON s.location_id = l.id
+  WHERE t.status = 'completed' AND s.location_id = 1
+`).all();
+console.log('Location filter test:', testQuery);
+```
   </action>
   <verify>
 Run server and check console output:
 - "History indexes created successfully" or similar message
 - EXPLAIN QUERY PLAN output shows "USING INDEX idx_tasks_history"
 - WAL mode enabled
+- "Added location_id column to systems table" message appears (or skip if duplicate)
+- Test location filtering query returns results with location_name
 - Query /api/history with 100+ tasks - response time < 100ms
   </verify>
   <done>
-Composite indexes exist (idx_tasks_history, idx_tasks_retention), WAL mode enabled, EXPLAIN QUERY PLAN confirms index usage, history queries perform well with large datasets.
+Composite indexes exist (idx_tasks_history, idx_tasks_retention), WAL mode enabled, EXPLAIN QUERY PLAN confirms index usage, systems.location_id column exists, location filtering via JOIN works correctly, history queries perform well with large datasets.
   </done>
 </task>
 
@@ -251,6 +282,8 @@ cleanupOldTasks(); // Should log count and result
   </action>
   <verify>
 Test scheduled job initialization:
+- npm install completes successfully
+- Check package.json - node-cron appears in dependencies with version ^3.x
 - Server starts without errors
 - Console shows: "[Data Retention] Cron job initialized (daily at 2:00 AM Israel time)"
 - Manual test: Create task with completed_at 3 years ago, run cleanupOldTasks(), task deleted
@@ -258,7 +291,7 @@ Test scheduled job initialization:
 - Transaction safety: No partial deletions on error
   </verify>
   <done>
-node-cron installed, dataRetention service exists with cleanupOldTasks and initializeDataRetention functions, cron job scheduled for 2 AM daily, logs show job initialized, manual cleanup works correctly with 2-year retention, transaction ensures atomic deletion.
+node-cron installed and appears in package.json, dataRetention service exists with cleanupOldTasks and initializeDataRetention functions, cron job scheduled for 2 AM daily, logs show job initialized, manual cleanup works correctly with 2-year retention, transaction ensures atomic deletion.
   </done>
 </task>
 
@@ -270,9 +303,11 @@ Backend history infrastructure complete when:
 2. Statistics show correct percentages using decimal division
 3. Pagination returns total count and hasMore flag
 4. EXPLAIN QUERY PLAN shows index usage (not table scan)
-5. Scheduled cleanup job initialized at server startup
-6. Manual cleanup correctly deletes tasks >2 years old, preserves newer tasks
-7. All operations use parameterized queries (no SQL injection risk)
+5. systems.location_id column exists for location filtering
+6. Location filtering via JOIN works correctly
+7. Scheduled cleanup job initialized at server startup
+8. Manual cleanup correctly deletes tasks >2 years old, preserves newer tasks
+9. All operations use parameterized queries (no SQL injection risk)
 </verification>
 
 <success_criteria>
@@ -289,6 +324,7 @@ Backend history infrastructure complete when:
 After completion, create `.planning/phases/04-history-archive/04-01-SUMMARY.md` documenting:
 - History endpoint contract (query params, response structure)
 - Index performance characteristics
+- Location filtering implementation (systems.location_id)
 - Cleanup job schedule and transaction safety
-- Any schema changes (location_id in systems table)
+- Schema changes (location_id in systems table)
 </output>
