fix(05): revise plans based on checker feedback
Addressed 9 blocker issues and 2 warnings:

Plan 01 (key_links_planned):
- Added explicit loadPath configuration in Task 3 showing path.join with translation file structure

Plan 02 (key_links_planned):
- Added BulkSend.jsx to files_modified
- Added Task 3 step to include employee.language in bulk send payload
- Added key_link for client->server language transmission
- Updated must_haves and success_criteria

Plan 03 (requirement_coverage, key_links_planned):
- Added Task 3 to verify RTL/LTR support for both HTML and WhatsApp
- Updated key_link to show JOIN query pattern for employee language
- Updated must_haves to include WhatsApp RTL handling
- Documented that WhatsApp handles RTL automatically

Plan 04 (key_links_planned):
- Updated key_link to show DB fallback pattern when client doesn't send language
- Added server-side language query as fallback in Task 1
- Documented backward compatibility approach

Plan 05a (task_completeness, verification_derivation):
- Updated Task 2 verification to test graceful degradation without credentials
- Refined must_haves.truths to be user-observable (removed implementation detail)

Plan 05b (dependency_correctness):
- Changed autonomous from true to false (has checkpoint in Task 2)
- Added checkpoint:human-verify after Task 1 for UI verification

--- a/.planning/phases/05-multi-language-support/05-01-PLAN.md
+++ b/.planning/phases/05-multi-language-support/05-01-PLAN.md
@@ -204,14 +204,34 @@ Pattern from RESEARCH.md "Complete i18next Setup for Node.js Backend":
 
 Key requirements:
 - Use `require('i18next')` and `require('i18next-fs-backend')` (CommonJS, not ESM)
-- Path: `path.join(__dirname, '../../src/locales/{{lng}}/{{ns}}.json')`
+- Configure backend with explicit loadPath showing path.join(__dirname, '../../src/locales/{{lng}}/{{ns}}.json')
 - Set `interpolation.escapeValue: false` (server-side, no XSS risk)
 - Namespaces: ['common', 'tasks', 'whatsapp']
 - defaultNS: 'common'
 - saveMissing: false (don't auto-create missing keys in production)
 
-Export module with:
+Implementation:
 ```javascript
+const i18next = require('i18next');
+const Backend = require('i18next-fs-backend');
+const path = require('path');
+
+i18next
+  .use(Backend)
+  .init({
+    fallbackLng: 'he',
+    supportedLngs: ['he', 'en', 'ru', 'ar'],
+    ns: ['common', 'tasks', 'whatsapp'],
+    defaultNS: 'common',
+    backend: {
+      loadPath: path.join(__dirname, '../../src/locales/{{lng}}/{{ns}}.json')
+    },
+    interpolation: {
+      escapeValue: false
+    },
+    saveMissing: false
+  });
+
 module.exports = {
   t: (key, options) => i18next.t(key, options),
   changeLanguage: (lng) => i18next.changeLanguage(lng),
