--- a/.planning/phases/05-multi-language-support/05-02-PLAN.md
+++ b/.planning/phases/05-multi-language-support/05-02-PLAN.md
@@ -9,6 +9,7 @@ files_modified:
   - server/routes/employees.js
   - client/src/components/EmployeeForm.jsx
   - client/src/components/EmployeesPage.jsx
+  - client/src/pages/BulkSend.jsx
 autonomous: true
 
 must_haves:
@@ -17,6 +18,7 @@ must_haves:
     - "Manager can select employee language in UI (he, en, ru, ar)"
     - "Employee language preference saved to database"
     - "Default language is Hebrew (he) for existing employees"
+    - "Client includes employee language when sending bulk WhatsApp messages"
   artifacts:
     - path: "server/database/schema.js"
       provides: "employees.language column migration"
@@ -27,6 +29,9 @@ must_haves:
     - path: "client/src/components/EmployeeForm.jsx"
       provides: "Language dropdown selector"
       contains: "select.*language"
+    - path: "client/src/pages/BulkSend.jsx"
+      provides: "Include employee language in bulk send request"
+      contains: "language"
   key_links:
     - from: "client/src/components/EmployeeForm.jsx"
       to: "POST /api/employees"
@@ -36,6 +41,10 @@ must_haves:
       to: "employees.language column"
       via: "SQL INSERT/UPDATE with language"
       pattern: "INSERT.*employees.*language"
+    - from: "client/src/pages/BulkSend.jsx"
+      to: "POST /send-bulk"
+      via: "Include employee.language in tasksByEmployee payload"
+      pattern: "language.*employee\\.language"
 ---
 
 <objective>
@@ -43,7 +52,7 @@ Add language preference field to employees table and manager UI for selecting em
 
 Purpose: Enable managers to configure each employee's preferred language (Hebrew, English, Russian, or Arabic), which will be used for WhatsApp messages and interactive task pages. This is the foundation for per-employee multilingual communication.
 
-Output: Database schema updated with language column, API endpoints support language field, manager UI has language selector dropdown in employee form.
+Output: Database schema updated with language column, API endpoints support language field, manager UI has language selector dropdown in employee form, bulk send UI includes language in request payload.
 </objective>
 
 <execution_context>
@@ -201,13 +210,14 @@ Should show language column values.
 </task>
 
 <task type="auto">
-  <name>Add language selector to manager UI</name>
+  <name>Add language selector to manager UI and include in bulk send</name>
   <files>
     client/src/components/EmployeeForm.jsx
     client/src/components/EmployeesPage.jsx
+    client/src/pages/BulkSend.jsx
   </files>
   <action>
-Add language dropdown to employee creation/editing form.
+Add language dropdown to employee creation/editing form and ensure bulk send includes language.
 
 **In EmployeeForm.jsx:**
 
@@ -269,6 +279,21 @@ Add language display to employee card/row (if not already showing all fields):
 ```
 
 Use flag emojis for visual clarity. This helps managers quickly identify employee language preferences.
+
+**In BulkSend.jsx (or wherever bulk WhatsApp send is implemented):**
+
+Ensure employee.language is included when building tasksByEmployee payload:
+```javascript
+tasksByEmployee[employeeId] = {
+  phone: employee.phone,
+  name: employee.name,
+  tasks: employeeTasks,
+  date: formattedDate,
+  language: employee.language || 'he'  // Add this field
+};
+```
+
+This ensures the /send-bulk endpoint receives employee language and can translate messages appropriately.
   </action>
   <verify>
 Manual UI verification:
@@ -281,10 +306,18 @@ Manual UI verification:
 7. Edit employee and change to "Russian"
 8. Verify update saves and displays "🇷🇺 Русский"
 
+Bulk send verification:
+1. Navigate to bulk send page
+2. Select employees and tasks
+3. Open browser DevTools Network tab
+4. Click "Send via WhatsApp"
+5. Inspect POST /send-bulk request body
+6. Verify tasksByEmployee contains language field for each employee
+
 Check browser console for errors during form submission.
 Check Network tab to verify language field sent in POST/PUT request body.
   </verify>
-  <done>EmployeeForm has language dropdown with 4 options (he, en, ru, ar), language included in form submission, EmployeesPage displays employee language with flag emoji.</done>
+  <done>EmployeeForm has language dropdown with 4 options (he, en, ru, ar), language included in form submission, EmployeesPage displays employee language with flag emoji, BulkSend includes employee.language in /send-bulk request payload.</done>
 </task>
 
 </tasks>
@@ -327,6 +360,10 @@ End-to-end language preference flow:
      -d '{"name":"Default Lang","phone":"0502222222"}' | jq '.language'
    ```
    Should return "he" (Hebrew default).
+
+5. **Bulk send includes language:**
+   - Use manager UI to send tasks via WhatsApp
+   - Check Network tab: POST /send-bulk body includes tasksByEmployee[id].language
 </verification>
 
 <success_criteria>
@@ -340,6 +377,7 @@ End-to-end language preference flow:
 8. Form submission includes language in request body
 9. Invalid language codes rejected by CHECK constraint
 10. Language preference persists across edits
+11. BulkSend includes employee.language in /send-bulk request payload
 </success_criteria>
 
 <output>
@@ -349,7 +387,7 @@ Document:
 - Database migration for language column
 - Language codes and their meanings (he, en, ru, ar)
 - API endpoint changes (POST, PUT)
-- UI components updated (EmployeeForm, EmployeesPage)
+- UI components updated (EmployeeForm, EmployeesPage, BulkSend)
 - Default language behavior (he)
 - Next steps: Use employee.language in HTML generation and WhatsApp sending
 </output>
