--- a/.planning/phases/05-multi-language-support/05-03-PLAN.md
+++ b/.planning/phases/05-multi-language-support/05-03-PLAN.md
@@ -15,6 +15,7 @@ must_haves:
     - "Page title, buttons, labels all translated"
     - "HTML dir attribute set to rtl for Hebrew/Arabic, ltr for English/Russian"
     - "Employee sees page in their configured language without JavaScript i18n"
+    - "WhatsApp handles RTL rendering automatically for Arabic text in messages"
   artifacts:
     - path: "server/services/htmlGenerator.js"
       provides: "Server-side HTML translation using i18n service"
@@ -29,8 +30,8 @@ must_haves:
       pattern: "require.*i18n.*getFixedT"
     - from: "server/services/htmlGenerator.js"
       to: "employees.language"
-      via: "Query employee language from DB"
-      pattern: "SELECT.*language.*FROM employees"
+      via: "Query employee language via task_confirmations JOIN"
+      pattern: "SELECT e\\.language FROM task_confirmations tc JOIN employees e ON tc\\.employee_id = e\\.id"
 ---
 
 <objective>
@@ -141,16 +142,15 @@ const { db } = require('../database/schema');
 **Inside generateTaskHtml(data) method, BEFORE reading template:**
 
 ```javascript
-// Get employee language from database
-const confirmation = db.prepare(`
-  SELECT employee_id FROM task_confirmations WHERE token = ?
+// Get employee language from database via JOIN
+const result = db.prepare(`
+  SELECT e.language
+  FROM task_confirmations tc
+  JOIN employees e ON tc.employee_id = e.id
+  WHERE tc.token = ?
 `).get(data.token);
 
-const employee = db.prepare(`
-  SELECT language FROM employees WHERE id = ?
-`).get(confirmation.employee_id);
-
-const language = employee?.language || 'he';
+const language = result?.language || 'he';
 console.log(`Generating HTML for language: ${language}`);
 
 // Get translations using getFixedT to lock language context
@@ -276,7 +276,62 @@ Should output:
 
 Repeat test for Russian (ru) and Arabic (ar).
   </verify>
-  <done>htmlGenerator queries employee language, uses i18n service with getFixedT to translate all UI strings, replaces template placeholders, sets correct lang and dir attributes, generated HTML shows correct language for employee.</done>
+  <done>htmlGenerator queries employee language via JOIN on task_confirmations, uses i18n service with getFixedT to translate all UI strings, replaces template placeholders, sets correct lang and dir attributes, generated HTML shows correct language for employee.</done>
+</task>
+
+<task type="auto">
+  <name>Verify RTL support for Hebrew and Arabic</name>
+  <files>server/services/htmlGenerator.js</files>
+  <action>
+Verify that RTL (right-to-left) text direction is correctly applied for Hebrew and Arabic languages in both HTML pages and WhatsApp messages.
+
+**For HTML pages (already implemented in Task 2):**
+- Hebrew (he) and Arabic (ar) set dir="rtl"
+- English (en) and Russian (ru) set dir="ltr"
+- Browser automatically handles RTL layout based on dir attribute
+
+**For WhatsApp messages:**
+WhatsApp automatically detects and handles RTL text direction based on the Unicode Bidirectional Algorithm. When Arabic or Hebrew text is sent:
+- WhatsApp client detects RTL characters (Arabic/Hebrew Unicode ranges)
+- Message bubble aligns right-to-left automatically
+- No explicit RTL configuration needed in server code
+
+**Verification approach:**
+Test both HTML and WhatsApp RTL rendering:
+
+1. Create Arabic employee (language='ar')
+2. Send tasks via WhatsApp - verify message appears RTL in WhatsApp app
+3. Open interactive HTML page - verify dir="rtl" in HTML and UI elements align right
+4. Verify same for Hebrew employee
+
+No code changes needed - this task is verification only to confirm ML-08 (RTL/LTR support) requirement.
+  </action>
+  <verify>
+Manual RTL verification:
+
+**HTML pages:**
+1. Create employee with language='ar' (Arabic)
+2. Send task via WhatsApp, get interactive page URL
+3. Open in browser, inspect HTML element
+4. Verify: `<html lang="ar" dir="rtl">`
+5. Verify UI elements (buttons, text fields) aligned right-to-left
+6. Repeat for Hebrew (he) - should also be RTL
+7. Repeat for English (en) - should be LTR with dir="ltr"
+
+**WhatsApp messages:**
+1. Send task to Arabic employee via WhatsApp
+2. Open WhatsApp on phone or WhatsApp Web
+3. Verify message text (greeting, headers in Arabic) displays RTL
+4. Verify message bubble aligns to right side
+5. Repeat for Hebrew employee - should also be RTL
+6. Repeat for Russian employee - should be LTR
+
+Expected results:
+- HTML: dir attribute correctly set for all languages
+- WhatsApp: RTL rendering automatic for Arabic/Hebrew text
+- No manual RTL configuration needed in WhatsApp messages
+  </verify>
+  <done>RTL support verified for Hebrew and Arabic in both HTML pages (via dir attribute) and WhatsApp messages (automatic detection). English and Russian confirmed as LTR.</done>
 </task>
 
 </tasks>
@@ -304,6 +359,7 @@ Comprehensive multilingual HTML generation verification:
    - Create employee with language 'ar'
    - Generate HTML
    - Verify: Arabic script, dir="rtl", right-to-left layout
+   - Verify WhatsApp message also displays RTL
 
 5. **Fallback to Hebrew:**
    - Create employee with no language (NULL or missing)
@@ -319,13 +375,17 @@ Comprehensive multilingual HTML generation verification:
    grep -E "[\u0590-\u05FF]+" ./docs/task-{english-employee-token}.html
    ```
    Should return no results (no Hebrew text in English page).
+
+8. **RTL verification:**
+   - Hebrew and Arabic: dir="rtl" in HTML, WhatsApp renders RTL automatically
+   - English and Russian: dir="ltr" in HTML, WhatsApp renders LTR
 </verification>
 
 <success_criteria>
 1. HTML template has {{LANGUAGE}} and {{TEXT_DIRECTION}} in html tag
 2. All hardcoded Hebrew strings replaced with {{PLACEHOLDER}} syntax
 3. htmlGenerator imports i18n service and db
-4. htmlGenerator queries employee language from database
+4. htmlGenerator queries employee language via JOIN on task_confirmations
 5. getFixedT locks translation context per language
 6. All translation placeholders replaced with actual translations
 7. dir="rtl" for Hebrew and Arabic, dir="ltr" for English and Russian
@@ -333,6 +393,8 @@ Comprehensive multilingual HTML generation verification:
 9. Generated HTML contains no hardcoded Hebrew when employee language is non-Hebrew
 10. Employee name interpolation works in all languages
 11. Fallback to Hebrew if employee language is NULL or invalid
+12. RTL verified for Hebrew/Arabic in both HTML and WhatsApp messages
+13. WhatsApp handles RTL automatically without explicit configuration
 </success_criteria>
 
 <output>
@@ -340,8 +402,9 @@ After completion, create `.planning/phases/05-multi-language-support/05-03-SUMMA
 
 Document:
 - Template placeholders added (list key placeholders)
-- htmlGenerator changes (i18n import, language query, translation logic)
+- htmlGenerator changes (i18n import, language query via JOIN, translation logic)
 - RTL/LTR logic (which languages use which direction)
+- WhatsApp RTL handling (automatic detection, no configuration needed)
 - Example: Show snippet of generated HTML for English vs Hebrew
 - Next steps: Apply same pattern to WhatsApp messages
 </output>
