--- a/.planning/phases/05-multi-language-support/05-04-PLAN.md
+++ b/.planning/phases/05-multi-language-support/05-04-PLAN.md
@@ -25,8 +25,8 @@ must_haves:
       pattern: "require.*i18n.*getFixedT"
     - from: "server/routes/whatsapp.js"
       to: "employees.language"
-      via: "Read language from tasksByEmployee data"
-      pattern: "data\\.language"
+      via: "Read language from tasksByEmployee data or query from DB"
+      pattern: "data\\.language|SELECT language FROM employees"
 ---
 
 <objective>
@@ -67,6 +67,7 @@ Update POST /send-bulk endpoint to translate WhatsApp messages based on employee
 **At top of file, add i18n import:**
 ```javascript
 const i18n = require('../services/i18n');
+const { db } = require('../database/schema');
 ```
 
 **Inside the for loop (around line 164), BEFORE building message:**
@@ -76,9 +77,17 @@ Currently sends hardcoded Hebrew:
 const { phone, name, tasks, date } = data;
 ```
 
-Add employee language query:
+Add employee language handling with server-side fallback:
 ```javascript
-const { phone, name, tasks, date, language } = data;
+let { phone, name, tasks, date, language } = data;
+
+// Fallback: if client doesn't send language, query from database
+if (!language) {
+  const employee = db.prepare('SELECT language FROM employees WHERE id = ?').get(employeeId);
+  language = employee?.language || 'he';
+  console.log(`Language not provided in request, queried from DB: ${language}`);
+}
+
 const employeeLanguage = language || 'he';
 console.log(`Employee ${name} language: ${employeeLanguage}`);
 
@@ -121,35 +130,8 @@ sortedTasks.forEach((task, index) => {
 message += '\n📱 ' + t('clickToView');
 ```
 
-**Ensure tasksByEmployee includes language:**
-
-In the client-side code that calls /send-bulk (likely in a React component), ensure employee object includes language field. If not already included, modify the bulk send logic to fetch employee language from database.
-
-The endpoint receives:
-```javascript
-tasksByEmployee: {
-  [employeeId]: {
-    phone: "...",
-    name: "...",
-    tasks: [...],
-    date: "...",
-    language: "en"  // <- MUST be included
-  }
-}
-```
-
-If client doesn't send language, query it server-side:
-```javascript
-// Inside for loop, after extracting data
-let { phone, name, tasks, date, language } = data;
-
-if (!language) {
-  // Fallback: query language from database
-  const employee = db.prepare('SELECT language FROM employees WHERE id = ?').get(employeeId);
-  language = employee?.language || 'he';
-  console.log(`Language not provided in request, queried from DB: ${language}`);
-}
-```
+**Note on Plan 02 dependency:**
+Plan 02 (Task 3) updates the client bulk send UI to include employee.language in the request payload. If client doesn't send it (e.g., old UI version), the server-side fallback queries it from the database. This ensures backward compatibility while maintaining the requirement from ML-04 (client sends language).
   </action>
   <verify>
 Manual testing with different language employees:
@@ -192,7 +174,7 @@ Manual testing with different language employees:
 6. **Translation accuracy:**
    Check received WhatsApp messages match translation files (src/locales/*/whatsapp.json).
   </verify>
-  <done>WhatsApp messages translated using i18n service, employee language read from database, greeting and headers in correct language, task data preserved, link message translated.</done>
+  <done>WhatsApp messages translated using i18n service, employee language read from request payload with DB fallback, greeting and headers in correct language, task data preserved, link message translated.</done>
 </task>
 
 </tasks>
@@ -239,20 +221,26 @@ Comprehensive WhatsApp multilingual verification:
    Employee Y language: ru
    Employee Z language: he
    ```
+
+8. **Fallback to DB query:**
+   - Client sends request without language field
+   - Server queries language from employees table
+   - Message sent in correct language
 </verification>
 
 <success_criteria>
-1. whatsapp.js imports i18n service
-2. /send-bulk endpoint extracts employee language from data or queries DB
-3. getFixedT locks translation context per employee
-4. WhatsApp message greeting uses t('greeting', {name})
-5. Task list header uses t('taskListHeader', {date, count})
-6. Click-to-view message uses t('clickToView')
-7. Employee receives message in configured language
-8. Fallback to Hebrew if language missing or invalid
-9. Multiple employees in same bulk send each get correct language
-10. Task titles and descriptions not translated (preserved as-is)
-11. No translation errors in server logs
+1. whatsapp.js imports i18n service and db
+2. /send-bulk endpoint extracts employee language from data
+3. If language not in request, server queries from employees table
+4. getFixedT locks translation context per employee
+5. WhatsApp message greeting uses t('greeting', {name})
+6. Task list header uses t('taskListHeader', {date, count})
+7. Click-to-view message uses t('clickToView')
+8. Employee receives message in configured language
+9. Fallback to Hebrew if language missing or invalid
+10. Multiple employees in same bulk send each get correct language
+11. Task titles and descriptions not translated (preserved as-is)
+12. No translation errors in server logs
 </success_criteria>
 
 <output>
@@ -260,7 +248,7 @@ After completion, create `.planning/phases/05-multi-language-support/05-04-SUMMA
 
 Document:
 - WhatsApp message translation pattern (getFixedT usage)
-- Language fallback logic (defaults to 'he')
+- Language fallback logic (client payload -> DB query -> default 'he')
 - Example messages in each language (screenshot or text snippet)
 - Translation keys used (greeting, taskListHeader, clickToView)
 - Next steps: Note translation service for employee-to-manager communication
