feat(05-03): replace hardcoded Hebrew with translation placeholders in HTML template
- Updated html tag to use {{LANGUAGE}} and {{TEXT_DIRECTION}} attributes
- Replaced all Hebrew UI strings with {{PLACEHOLDER}} syntax
- Added missing translation keys to all 4 language files
- Template now fully translatable: page title, buttons, labels, errors, badges
- Removed hardcoded direction: rtl from body CSS (will be set via html tag)

Files modified:
- server/templates/task-confirmation.html: 25+ placeholders added
- src/locales/{he,en,ru,ar}/tasks.json: Added 12 new translation keys

--- a/src/locales/ar/tasks.json
+++ b/src/locales/ar/tasks.json
@@ -9,6 +9,17 @@
   "uploadImageLabel": "تحميل صورة",
   "uploadImageHint": "حتى 5 ميجابايت، JPG أو PNG فقط",
   "taskCompleted": "تم إكمال المهمة بنجاح!",
+  "acknowledgedAtText": "تم تأكيد المهام في ",
+  "loading": "جارٍ التحميل...",
+  "footerText": "نظام إدارة الصيانة - Eden",
+  "completionDetails": "تفاصيل الإكمال",
+  "sending": "جارٍ الإرسال...",
+  "error": "خطأ",
+  "errorUnknown": "خطأ غير معروف",
+  "errorSending": "خطأ في إرسال البيانات",
+  "acknowledging": "جارٍ التأكيد...",
+  "acknowledgeSuccess": "تم تأكيد المهام بنجاح!",
+  "acknowledgeError": "خطأ في تأكيد المهام",
   "priority": {
     "urgent": "عاجل",
     "normal": "عادي",
