--- a/src/locales/en/tasks.json
+++ b/src/locales/en/tasks.json
@@ -9,6 +9,17 @@
   "uploadImageLabel": "Upload Image",
   "uploadImageHint": "Up to 5MB, JPG or PNG only",
   "taskCompleted": "Task completed successfully!",
+  "acknowledgedAtText": "Tasks acknowledged at ",
+  "loading": "Loading...",
+  "footerText": "Maintenance Management System - Eden",
+  "completionDetails": "Completion Details",
+  "sending": "Sending...",
+  "error": "Error",
+  "errorUnknown": "Unknown error",
+  "errorSending": "Error sending data",
+  "acknowledging": "Acknowledging...",
+  "acknowledgeSuccess": "Tasks acknowledged successfully!",
+  "acknowledgeError": "Error acknowledging tasks",
   "priority": {
     "urgent": "Urgent",
     "normal": "Normal",
