--- a/src/locales/he/tasks.json
+++ b/src/locales/he/tasks.json
@@ -9,6 +9,17 @@
   "uploadImageLabel": "צלם תמונה",
   "uploadImageHint": "עד 5MB, JPG או PNG בלבד",
   "taskCompleted": "המשימה הושלמה בהצלחה!",
+  "acknowledgedAtText": "קבלת המשימות אושרה ב-",
+  "loading": "טוען...",
+  "footerText": "מערכת ניהול תחזוקה - Eden",
+  "completionDetails": "פרטי השלמה",
+  "sending": "שולח...",
+  "error": "שגיאה",
+  "errorUnknown": "שגיאה לא ידועה",
+  "errorSending": "שגיאה בשליחת הנתונים",
+  "acknowledging": "מאשר...",
+  "acknowledgeSuccess": "קבלת המשימות אושרה בהצלחה!",
+  "acknowledgeError": "שגיאה באישור קבלת המשימות",
   "priority": {
     "urgent": "דחוף",
     "normal": "רגיל",
