--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -9,6 +9,17 @@
   "uploadImageLabel": "Загрузить изображение",
   "uploadImageHint": "До 5 МБ, только JPG или PNG",
   "taskCompleted": "Задача успешно выполнена!",
+  "acknowledgedAtText": "Задачи подтверждены в ",
+  "loading": "Загрузка...",
+  "footerText": "Система управления техническим обслуживанием - Eden",
+  "completionDetails": "Детали выполнения",
+  "sending": "Отправка...",
+  "error": "Ошибка",
+  "errorUnknown": "Неизвестная ошибка",
+  "errorSending": "Ошибка отправки данных",
+  "acknowledging": "Подтверждение...",
+  "acknowledgeSuccess": "Задачи успешно подтверждены!",
+  "acknowledgeError": "Ошибка подтверждения задач",
   "priority": {
     "urgent": "Срочно",
     "normal": "Обычный",
